# stk-code

./: CMakeLists.txt
.github/workflows/: apple.yml  main.yml  windows.yml
android/: Android.mk  AndroidManifest.xml  make.sh  make_deps.sh
android/src/main/java/: SuperTuxKartActivity.java
cmake/: BuildSTKDeps.cmake  Toolchain-ios.cmake  Toolchain-llvm-mingw-64bit.cmake  Toolchain-llvm-mingw.cmake  Toolchain-mingw-64bit.cmake  Toolchain-mingw.cmake
data/: SuperTuxKart-Info-iOS.plist
data/shaders/ge_shaders/: 2d_render.frag  grass.vert  normal_particle.comp  spm.vert  spm_skinning.vert
data/shaders/ge_shaders/compressonator/: bc3_encode_kernel.hlsl
data/shaders/ge_shaders/utils/: constants.h  gpu_particle_data.h  object_data.h  sample_mesh_texture.h  spm_layout.h
data/shaders/utils/: get_world_location.vert
lib/angelscript/projects/cmake/: CMakeLists.txt
lib/graphics_engine/: CMakeLists.txt
lib/graphics_engine/glslang/: CMakeLists.txt  glslmini.cpp  update_glslang.sh
lib/graphics_engine/glslang/glslang/: CMakeLists.txt
lib/graphics_engine/glslang/glslang/Include/: Common.h
lib/graphics_engine/include/: ge_main.hpp  ge_thread_local.hpp  ge_vulkan_driver.hpp  ge_vulkan_features.hpp  ge_vulkan_particle.hpp  vulkan_wrapper.h
lib/graphics_engine/include/glad/: gl.h  vulkan.h
lib/graphics_engine/src/: ge_main.cpp  ge_vulkan_2d_renderer.cpp  ge_vulkan_bc3.cpp  ge_vulkan_bc3.hpp  ge_vulkan_command_loader.cpp  ge_vulkan_command_loader.hpp  ge_vulkan_draw_call.cpp  ge_vulkan_draw_call.hpp  ge_vulkan_driver.cpp  ge_vulkan_dynamic_buffer.cpp  ge_vulkan_dynamic_buffer.hpp  ge_vulkan_fbo_texture.cpp  ge_vulkan_fbo_texture.hpp  ge_vulkan_features.cpp  ge_vulkan_features.hpp  ge_vulkan_particle.cpp  ge_vulkan_particle_manager.cpp  ge_vulkan_particle_manager.hpp  ge_vulkan_scaled_fbo.cpp  ge_vulkan_scaled_fbo.hpp  ge_vulkan_shader_manager.cpp  ge_vulkan_shader_manager.hpp  ge_vulkan_skybox_renderer.cpp  ge_vulkan_texture.cpp  gl.c
lib/irrlicht/: CMakeLists.txt
lib/irrlicht/include/: GlyphLayout.h  IParticleSystemSceneNode.h  ISceneNode.h
lib/irrlicht/source/Irrlicht/: CIrrDeviceAndroid.cpp  CIrrDeviceSDL.cpp  CIrrDeviceSDL.h  mac_vulkan.h  mac_vulkan.mm  (+2 more)
lib/occlusion_culling/: CMakeLists.txt
lib/occlusion_culling/include/: occlusion_culling.hpp
lib/occlusion_culling/src/: occlusion_culling.cpp  simd_wrapper.h
lib/occlusion_culling/src/sse/: MaskedOcclusionCulling.cpp  MaskedOcclusionCullingDetectCPU.cpp
lib/occlusion_culling/src/sse2/: MaskedOcclusionCulling.cpp  MaskedOcclusionCullingDetectCPU.cpp
lib/sheenbidi/Source/: SBAlgorithm.c
src/: main.cpp  main_android.cpp  main_loop.cpp
src/config/: hardware_stats.cpp  user_config.cpp
src/font/: font_manager.cpp  font_manager.hpp  font_with_face.cpp
src/graphics/: explosion.cpp  irr_driver.cpp  particle_emitter.cpp  particle_emitter.hpp  stk_particle.cpp  stk_particle.hpp
src/graphics/sp/: sp_base.cpp
src/guiengine/: event_handler.cpp
src/guiengine/widgets/: CGUIEditBox.cpp  text_box_widget.cpp
src/input/: device_manager.cpp  input_manager.cpp
src/io/: file_manager.cpp
src/network/: server_config.cpp  stk_peer.cpp  stk_peer.hpp
src/network/protocols/: client_lobby.cpp  server_lobby.cpp
src/online/: link_helper.cpp  link_helper.hpp
src/states_screens/: race_gui.cpp  state_manager.cpp
src/states_screens/online/: networking_lobby.cpp  online_lan.cpp
src/tracks/: track.cpp  track.hpp
src/utils/: log.cpp
